# EECE5554

./: .gitignore
LAB0/: LAB0_tree.txt  phillip.txt
LAB0/src/pubsub/: setup.py
LAB0/src/pubsub/pubsub/: listener.py
LAB1/analysis/: analyze_gps_lab1.py  analyze_lab1.py  analyze_lab1_rosbag2py.py  lab1_analysis.py
LAB1/bags/gps_static/: gps_static_0.db3
LAB1/bags/gps_walk/: gps_walk_0.db3  metadata.yaml
LAB1/occluded_5min/: occluded_5min_0.db3
LAB1/plots/: occluded_5min.csv  open_sky_5min.csv  walking_200m.csv
LAB1/src/gps_driver/: setup.py
LAB1/src/gps_driver/scripts/: driver.py
LAB1/src/gps_interfaces/: CMakeLists.txt
LAB1/src/gps_lab1/gps_lab1/: gps_serial_to_utm.py
LAB1/walking_200m/: walking_200m_0.db3
LAB3/: Untitled.ipynb  plot_motion_clips.py  run_allan.py  run_allan_fast.py
LAB3/Analysis/: Lab3_AllanVariance_Tools.ipynb  allan_analysis.py  bag_to_csv.py  extract_imu.py  motion_analysis.py  plot_stationary.py  stationary_analysis.py
LAB3/Data/stationary_bag/: metadata.yaml
LAB3/Report/: Lab3_Report.md
LAB3/src/custom_interfaces/: CMakeLists.txt  package.xml
LAB3/src/imu_driver/: package.xml  setup.py
LAB3/src/imu_driver/imu_driver/: imu_driver.py
LAB3/src/imu_driver/launch/: imu_launch.py
LAB3/src/imu_interfaces/: CMakeLists.txt  package.xml
LAB3/src/imu_msgs/: CMakeLists.txt  package.xml
analysis/: gnss_analysis.py  lab2_analyze.py
analysis/shims/gps_driver/: __init__.py
data/: occluded_gps  open_gps  walking_gps
data/occludedRTK/: metadata.yaml  occludedRTK_0.db3
data/occludedRTK_new/: metadata.yaml  occludedRTK_new_0.db3
data/occluded_rtk/: metadata.yaml
data/openGNSS/: metadata.yaml  open_sky_5min_0.db3
data/openRTK/: metadata.yaml
data/openRTK_new/: metadata.yaml  openRTK_new_0.db3
data/open_rtk/: metadata.yaml
data/walkingRTK/: metadata.yaml  walkingRTK_0.db3
data/walkingRTK_new/: metadata.yaml  walkingRTK_new_0.db3
gnss/analysis/: rtk_analysis.py
gnss/data/archive/occluded_rtk/: occluded_rtk_0.db3
gnss/data/archive/open_rtk/: open_rtk_0.db3
gnss/data/archive/test_rtk/: metadata.yaml  test_rtk_0.db3
gnss/data/archive/walking_rtk/: metadata.yaml  walking_rtk_0.db3
gnss/data/occludedGNSS/: metadata.yaml
gnss/data/openRTK/: openRTK_0.db3
gnss/data/walkingGNSS/: metadata.yaml
gnss/src/gps_driver/: CMakeLists.txt
gnss/src/rtk_driver/: package.xml  setup.py
gnss/src/rtk_driver/rtk_driver/: rtk_driver.py
gnss/src/rtk_interfaces/msg/: Customrtk.msg
src/gps_driver/: CMakeLists.txt  package.xml
src/gps_driver/gps_driver/: driver.py
src/gps_driver/launch/: walk_record.launch.py
src/gps_driver/msg/: GpsMsg.msg
src/gps_interfaces/: CMakeLists.txt  package.xml
src/rtk_driver/: package.xml.backup
src/rtk_driver/launch/: rtk_driver_launch.py
src/rtk_driver/resource/: rtk_driver
src/rtk_driver/rtk_driver/: rtk_driver.py
src/rtk_interfaces/: CMakeLists.txt  package.xml
src/rtk_interfaces/msg/: Customrtk.msg
