<?xml version="1.0"?>
<package format="3">
  <name>rtk_interfaces</name>
  <version>0.0.0</version>
  <description>RTK GNSS custom message definitions</description>

  <maintainer email="muvadi.p@northeastern.edu">phillip</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
