<?xml version="1.0"?>
<package format="3">
  <name>rtk_driver</name>
  <version>0.0.0</version>
  <description>RTK GNSS driver for EECE 5554 Lab 2</description>
  <maintainer email="phillip@example.com">Phillip</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rtk_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
